# Geodify

./: .gitignore  Base_mod.json  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  about.md  changelog.md  generate_tags.py  logo.pdn  mod.json  support.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  feature_request.yml  layer-request.md  layer-request.yml
.github/workflows/: multi-platform.yml  update-mod.yml
res/: layers.json
src/: CustomSettingLayer.cpp  GeodifyScreenshotPopup.hpp  SettingsLayerButton.cpp  SwelvyBG.cpp  SwelvyBG.hpp  Tags.hpp
src/Hooks/: External_Mods_Manager.cpp  Hooker.cpp  Hooker.hpp  OtherModsHooks.cpp
src/layers/: GYColorPopup.cpp  GYColorPopup.hpp  GYModSettingsPopup.cpp  GYModSettingsPopup.hpp  GYModTile.cpp  GYModTile.hpp  GYScreenshotPopup.cpp  GYScreenshotPopup.hpp  GYSettingSelectLayer.cpp  GYSettingSelectLayer.hpp  Tags.hpp
src/modify/: CCLayer.cpp  CreatorLayer.cpp  EditLevelLayer.cpp  FMODAudioEngine.cpp  GJGarageLayer.cpp  GauntletLayer.cpp  GauntletSelectLayer.cpp  LeaderboardsLayer.cpp  LevelAreaInnerLayer.cpp  LevelAreaLayer.cpp  LevelBrowserLayer.cpp  LevelInfoLayer.cpp  LevelListLayer.cpp  LevelSearchLayer.cpp  LevelSelectLayer.cpp  LoadingLayer.cpp  MenuLayer.cpp  PlayLayer.cpp  SecretLayer.cpp  SecretLayer2.cpp  SecretLayer3.cpp  SecretLayer4.cpp  SecretRewardsLayer.cpp  UIPOptionsLayer.cpp
src/modify/Globed/: GlobedMenuLayer.cpp  GlobedServersLayer.cpp  GlobedServersLayer.hpp
src/modify/TexturePackLoader/: PackSelectLayer.cpp
src/modify/TexturePackWorkshop/: PackSelectLayer.cpp  TextureWorkshopLayer.cpp
src/modify/alphalaneous.random_tab/: RandomLayer.cpp
src/modify/cvolton.betterinfo/: CustomCreatorLayer.cpp  DailyViewLayer.cpp  LeaderboardViewLayer.cpp  LevelSearchViewLayer.cpp  RewardGroupLayer.cpp  RewardViewLayer.cpp
src/modify/dankmeme.globed2/: GlobedLevelListLayer.cpp  GlobedMenuLayer.cpp  GlobedServersLayer.cpp  GlobedSettingsLayer.cpp  SettingsLayer.cpp
src/modify/gd/: CreatorLayer.cpp  EditLevelLayer.cpp  GJGarageLayer.cpp  GJShopLayer.cpp  GauntletLayer.cpp  GauntletSelectLayer.cpp  LeaderboardsLayer.cpp  LevelAreaInnerLayer.cpp  LevelAreaLayer.cpp  LevelBrowserLayer.cpp  LevelInfoLayer.cpp  LevelListLayer.cpp  LevelSearchLayer.cpp  LevelSelectLayer.cpp  LoadingLayer.cpp  MenuLayer.cpp  PlayLayer.cpp  SecretLayer.cpp  SecretLayer2.cpp  (+6 more)
thesillydoggo.newgrounds_explorer/: NewgroundsBrowserLayer.cpp
(+28 files in other folders)
